# homework

./: pyproject.toml  widget.py
src/: add_task.py  decorators.py  generators.py  masks.py  mylog.txt  processing.py  widget.py
tests/: test.txt  test_add_task.py  test_decorators.py  test_generators.py  test_masks.py  test_processing.py  test_widget.py
