[tool.poetry]
name = "pythonproject1"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pytest = "^7.4.3"


[tool.poetry.group.lint.dependencies]
flake8 = "^6.1.0"
black = "^23.10.0"
isort = "^5.12.0"
mypy = "^1.6.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
strict = true
ignore_missing_imports = true

[tool.black]
line-length = 119
target-version = ['py38']

[tool.isort]
line_length = 119